--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "rxjs": "~6.4.0",
