edited many things for deploy

--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build --prod",
+    "postbuild": "npm run deploy",
+    "predeploy": "rm -rf ../iis-be/src/main/resources/static/ && mkdir -p ../iis-be/src/main/resources/static/",
+    "deploy": "cp -r ./dist/* ../iis-be/src/main/resources/static/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -35,12 +38,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.6",
-    "@angular/cli": "~8.3.6",
+    "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
